[gd_scene load_steps=20 format=3 uid="uid://ino0lr2m12uh"]

[ext_resource type="Theme" uid="uid://bql5sxaowafw3" path="res://Resources/Theme/wc3_theme.tres" id="1_au6ps"]
[ext_resource type="Script" path="res://Scenes/HUD/ItemStashMenu/ItemStashMenu.gd" id="2_7jmcp"]
[ext_resource type="StyleBox" uid="uid://cwmhuo2ppjfx2" path="res://Resources/Theme/Common/rect_container_m.tres" id="3_tvpws"]
[ext_resource type="Script" path="res://Scenes/HUD/UnitButtonsContainer.gd" id="4_y6e5m"]
[ext_resource type="PackedScene" uid="uid://8xsklkw4jhlw" path="res://Scenes/HUD/Buttons/EmptyUnitButton.tscn" id="5_mldwo"]
[ext_resource type="Script" path="res://Scenes/HUD/ItemStashMenu/HoradricMenu.gd" id="6_inc2u"]
[ext_resource type="PackedScene" uid="uid://c1ccsqvpyqd4i" path="res://Scenes/HUD/Buttons/RecipeButton.tscn" id="7_4dttm"]
[ext_resource type="Texture2D" uid="uid://b1oind72lxrm4" path="res://Resources/Icons/hud/recipe_rebrew.tres" id="8_aeibv"]
[ext_resource type="Texture2D" uid="uid://dfqns87v0xu7x" path="res://Resources/Icons/hud/recipe_distill.tres" id="9_nqpec"]
[ext_resource type="Texture2D" uid="uid://bk4dvb16ukwx8" path="res://Resources/Icons/hud/recipe_reassemble.tres" id="10_yki42"]
[ext_resource type="Texture2D" uid="uid://bqsnuywmbb5c1" path="res://Resources/Icons/mechanical/alchemy_kit_03.tres" id="11_vmis2"]
[ext_resource type="Texture2D" uid="uid://bvclahxp4mvge" path="res://Resources/Icons/hud/recipe_perfect.tres" id="11_vtu31"]
[ext_resource type="Texture2D" uid="uid://b30yt0bkbmhsj" path="res://Resources/Icons/mechanical/alchemy_kit_01.tres" id="12_b1vp8"]
[ext_resource type="Texture2D" uid="uid://bkmyw11w5jqjw" path="res://Resources/Icons/magic/magic_stone.tres" id="13_hyx2e"]
[ext_resource type="PackedScene" uid="uid://d0snws11d0wjs" path="res://Scenes/HUD/ItemStashMenu/RarityFilterContainer.tscn" id="15_id2sv"]
[ext_resource type="PackedScene" uid="uid://ib3y0a6h0v46" path="res://Scenes/HUD/ItemStashMenu/ItemTypeFilterContainer.tscn" id="16_k0q2d"]
[ext_resource type="Texture2D" uid="uid://60qc7jcvckhh" path="res://Assets/HUD/misc3.png" id="17_ba6s8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sda8v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wh5fy"]
atlas = ExtResource("17_ba6s8")
region = Rect2(896, 0, 128, 128)

[node name="ItemStashMenu" type="PanelContainer" node_paths=PackedStringArray("_rarity_filter_container", "_item_type_filter_container", "_item_buttons_container", "_backpacker_recipes", "_horadric_menu")]
custom_minimum_size = Vector2(600, 850)
offset_right = 614.0
offset_bottom = 802.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_force_pass_scroll_events = false
theme = ExtResource("1_au6ps")
theme_override_styles/panel = SubResource("StyleBoxEmpty_sda8v")
script = ExtResource("2_7jmcp")
_rarity_filter_container = NodePath("MarginContainer4/VBoxContainer2/RarityFilterContainer")
_item_type_filter_container = NodePath("MarginContainer4/VBoxContainer2/ItemTypeFilterContainer")
_item_buttons_container = NodePath("MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer")
_backpacker_recipes = NodePath("MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/BackpackerRecipes")
_horadric_menu = NodePath("MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="Panel" type="PanelContainer" parent="MarginContainer2"]
custom_minimum_size = Vector2(600, 830)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_type_variation = &"MainPanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/Panel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Inventory" type="PanelContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = -10

[node name="Label" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer"]
layout_mode = 2
theme_type_variation = &"LabelSectionTitle"
text = "Items"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_bottom = -1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(2.08165e-12, 390)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_bottom = 10

[node name="ItemButtonsContainer" type="GridContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5
script = ExtResource("4_y6e5m")

[node name="EmptyUnitButton1" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton12" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton11" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton4" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton5" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton6" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton7" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton8" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton9" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton10" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton2" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton3" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton13" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton14" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton15" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton16" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton17" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton18" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton19" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton20" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="HoradricCube" type="PanelContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer" node_paths=PackedStringArray("_items_container", "_transmute_button")]
custom_minimum_size = Vector2(2.08165e-12, 280)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
script = ExtResource("6_inc2u")
_items_container = NodePath("VBoxContainer/HBoxContainer/MarginContainer2/HoradricCubeContainer")
_transmute_button = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer2/TransmuteButton")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = -10

[node name="Label" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/MarginContainer"]
layout_mode = 2
theme_type_variation = &"LabelSectionTitle"
text = "Horadric Cube"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="GridContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment_horizontal = 2
alignment_vertical = 2

[node name="RebrewButton" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/AspectRatioContainer" instance=ExtResource("7_4dttm")]
layout_mode = 2
icon = ExtResource("8_aeibv")
recipe = 1

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment_horizontal = 0
alignment_vertical = 2

[node name="DistillButton" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/AspectRatioContainer2" instance=ExtResource("7_4dttm")]
layout_mode = 2
icon = ExtResource("9_nqpec")
recipe = 2

[node name="AspectRatioContainer3" type="AspectRatioContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment_horizontal = 2
alignment_vertical = 0

[node name="ReassembleButton" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/AspectRatioContainer3" instance=ExtResource("7_4dttm")]
layout_mode = 2
icon = ExtResource("10_yki42")
recipe = 3

[node name="AspectRatioContainer4" type="AspectRatioContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment_horizontal = 0
alignment_vertical = 0

[node name="PerfectButton" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/AspectRatioContainer4" instance=ExtResource("7_4dttm")]
layout_mode = 2
icon = ExtResource("11_vtu31")
recipe = 4

[node name="BackpackerRecipes" type="GridContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
columns = 3

[node name="AspectRatioContainer1" type="AspectRatioContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/BackpackerRecipes"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment_horizontal = 0
alignment_vertical = 0

[node name="LiquefyButton" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/BackpackerRecipes/AspectRatioContainer1" instance=ExtResource("7_4dttm")]
layout_mode = 2
icon = ExtResource("11_vmis2")
recipe = 5

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/BackpackerRecipes"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment_horizontal = 0
alignment_vertical = 0

[node name="PrecipitateButton" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/BackpackerRecipes/AspectRatioContainer2" instance=ExtResource("7_4dttm")]
layout_mode = 2
icon = ExtResource("12_b1vp8")
recipe = 6

[node name="AspectRatioContainer3" type="AspectRatioContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/BackpackerRecipes"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment_horizontal = 0
alignment_vertical = 0

[node name="ImbueButton" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/BackpackerRecipes/AspectRatioContainer3" instance=ExtResource("7_4dttm")]
layout_mode = 2
icon = ExtResource("13_hyx2e")
recipe = 7

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_bottom = 15

[node name="TransmuteButton" type="Button" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
tooltip_text = "Convert ingredients into a new item. This button will become enabled when it's possible to convert ingredients."
focus_mode = 0
text = "MERGE"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="InfoLabel" type="RichTextLabel" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/MarginContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
bbcode_enabled = true
text = "[color=LIGHT_BLUE]The element of frost magic. Ice towers use slowing and drowning effects on enemies.[/color]

[color=GOLD]Main attack types:[/color] Elemental, Energy"
fit_content = true
scroll_active = false

[node name="EmptySlotsContainer" type="GridContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="EmptyUnitButton1" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/MarginContainer2/EmptySlotsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton12" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/MarginContainer2/EmptySlotsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton11" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/MarginContainer2/EmptySlotsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton4" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/MarginContainer2/EmptySlotsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton5" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/MarginContainer2/EmptySlotsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="EmptyUnitButton6" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/MarginContainer2/EmptySlotsContainer" instance=ExtResource("5_mldwo")]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="HoradricCubeContainer" type="GridContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="MarginContainer4" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_constants/margin_left = -30
theme_override_constants/margin_top = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer4"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_constants/separation = 40

[node name="ItemTypeFilterContainer" parent="MarginContainer4/VBoxContainer2" instance=ExtResource("16_k0q2d")]
layout_mode = 2

[node name="RarityFilterContainer" parent="MarginContainer4/VBoxContainer2" instance=ExtResource("15_id2sv")]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = ExtResource("3_tvpws")
text = "Inventory"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_top = 15

[node name="CloseButton" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
focus_mode = 0
theme_type_variation = &"CircleButton"
icon = SubResource("AtlasTexture_wh5fy")
icon_alignment = 1
expand_icon = true

[connection signal="gui_input" from="MarginContainer2/Panel/MarginContainer/VBoxContainer/Inventory/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/ItemButtonsContainer" to="." method="_on_item_buttons_container_gui_input"]
[connection signal="pressed" from="MarginContainer2/Panel/MarginContainer/VBoxContainer/HoradricCube/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer2/TransmuteButton" to="." method="_on_transmute_button_pressed"]
[connection signal="filter_changed" from="MarginContainer4/VBoxContainer2/ItemTypeFilterContainer" to="." method="_on_item_type_filter_container_filter_changed"]
[connection signal="filter_changed" from="MarginContainer4/VBoxContainer2/RarityFilterContainer" to="." method="_on_rarity_filter_container_filter_changed"]
[connection signal="pressed" from="MarginContainer/CloseButton" to="." method="_on_close_button_pressed"]
